<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Selfie Share</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <string name="title_activity_main">Login</string>
    <string name="welcome">Welcome</string>
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>

    <!-- SignUpActivity -->
    <string name="title_activity_sign_up">SignUp</string>
    <string name="signUpHeadLine">Registration</string>
    <string name="usernameHint">Username</string>
    <string name="phoneNumberHint">Phone Number</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="ageHint">Age</string>
    <string name="sexMale">Male</string>
    <string name="sexFemale">Female</string>

    <!-- HomeActivity -->
    <string name="title_activity_home">Home</string>

    <!-- NearByActivity -->
    <string name="title_activity_near_by">Near By</string>

    <!-- RequestedActivity -->
    <string name="title_activity_requested">Requested</string>

    <!-- ReceivedActivity -->
    <string name="title_activity_received">Received</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Menu -->
    <string name="title_menu_fragment">Menu</string>
    <string name="home">Home</string>
    <string name="nearBy">Near By</string>
    <string name="requested">Requested</string>
    <string name="received">Received</string>
    <string name="settings">Settings</string>
    <string name="title_activity_request_detail">Request Detail</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
   
    <!-- UserDetail -->
    <string name="title_activity_user_detail">User Detail</string>
     <string name="sendPicture">Send Picture</string>
    

</resources>
