<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nearBy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.godfather.selfieshare.activities.NearByActivity" >

    <ListView
        android:id="@+id/li_listView"
        android:layout_width="match_parent"
        android:layout_height="306dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.77"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/menuHome"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home" />

            <Button
                android:id="@+id/menuNearBy"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearBy" />

            <Button
                android:id="@+id/menuRequested"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/requested" />

            <Button
                android:id="@+id/menuRecieved"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/received" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:gravity="bottom|center|end"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/menuSettings"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>