<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.god.father.selfieshare.Login" >

    <TextView
       	android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:textColor="@android:color/white" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:onClick="login"
        android:text="@string/login" />

      <Button
        android:id="@+id/signUpBtn"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:onClick="register"
        android:text="@string/signup" />
</LinearLayout>